# Zeno

./: .gitignore  AGENTS.md  ATOMIC_DEVELOPMENT_PLAN.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  VISION.md
docs/: PROJECT_DIRECTION.md  TROUBLESHOOTING.md
docs/research/: README.md
specs/: master-plan.md  phase-0-foundations.md  phase-1-core-editor.md  phase-2-hybrid-rendering.md  phase-3-project-file-system.md  phase-4-integrated-terminal.md  phase-5-zettelkasten-intelligence.md  phase-6-v1-polishing.md
src/: main.rs
src/editor/: mod.rs  state.rs
src/markdown/: highlight.rs
src/ui/: editor.rs  mod.rs  theme.rs  workspace.rs
