[package]
name = "zeno-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
tree-sitter = "0.26"
tree-sitter-md = "0.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
# gpui depends on `core-text = "21"` and `core-graphics = "0.24"`. Newer `core-text` releases can
# pull in `core-graphics = "0.25"` which causes type mismatches (E0308) due to duplicate
# `core-graphics` versions in the graph. Pinning `core-text` avoids this.
core-text = "=21.0.0"
